// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Page test suite Should render Home Page correctly 1`] = `
<div
  class="container"
>
  <div
    class="questionForm"
  >
    <h1
      class="questionForm__title"
    >
      What do you want to do?
    </h1>
    <form
      autocomplete="off"
      class="questionForm__form"
    >
      <input
        class="questionForm__form__input"
        data-testid="input"
        name="toDo"
        type="text"
        value=""
      />
      <button
        class="questionForm__form__btn"
        type="submit"
      >
        Decide
      </button>
    </form>
  </div>
  <div
    class="modal modal--invisible"
  >
    <div
      class="modal__overlay"
    >
      <div
        class="modal__content"
      >
        <h3
          class="modal__title"
        >
          Error
        </h3>
        <p
          class="modal__body"
        />
        <button
          class="modal__button"
        >
          Okay
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Home Page test suite Should render Home Page with an Answer 1`] = `
<div
  class="container"
>
  <div
    class="questionForm"
  >
    <h1
      class="questionForm__title"
    >
      What do you want to do?
    </h1>
    <form
      autocomplete="off"
      class="questionForm__form"
    >
      <input
        class="questionForm__form__input"
        data-testid="input"
        name="toDo"
        type="text"
        value=""
      />
      <button
        class="questionForm__form__btn"
        type="submit"
      >
        Decide
      </button>
    </form>
  </div>
  <div
    class="modal modal--invisible"
  >
    <div
      class="modal__overlay"
    >
      <div
        class="modal__content"
      >
        <h3
          class="modal__title"
        >
          Error
        </h3>
        <p
          class="modal__body"
        />
        <button
          class="modal__button"
        >
          Okay
        </button>
      </div>
    </div>
  </div>
  <div
    class="answer"
  >
    <h1
      class="answer__title"
    >
      do it
    </h1>
    <img
      alt="Should You Do It gif"
      class="answer__image"
      src="someGif.gif"
    />
    <button
      class="answer__btn"
    >
      Clean
    </button>
  </div>
</div>
`;
